2011-01-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc. BACKPORT.
	* win/configure:      (autoconf-2.59)
	* win/tclWin32Dll.c:  [Patch 3059922]: fixes for mingw64 - gcc4.5.1

2011-01-15  Kevin B. Kenny  <kennykb@users.sf.net>

	* doc/tclvars.n:
	* generic/tclStrToD.c:
	* generic/tclUtil.c (Tcl_PrintDouble):
	* tests/util.test (util-16.*): Restored full Tcl 8.4 compatibility
	for the formatting of floating point numbers when $::tcl_precision
	is not zero. Added compatibility tests to make sure that excess
	trailing zeroes are suppressed for all eight major code paths.
	[Bug 3157475]

2011-01-13  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (GrowEvaluationStack): Off-by-one error in
	sizing the new allocation - was ok in comment but wrong in the code.
	Triggered by [Bug 3142026] which happened to require exactly one more
	than what was in existence. BACKPORT.

2011-01-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:  Fix "make genstubs", which was broken
	since 2010-11-30, the TclDoubleDigits backport.

2010-12-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclHash.c: [Bug 3007895]: Tcl_(Find|Create)HashEntry
	stub entries can never be called. They still cannot be called
	(no change in functionality), but at least they now do
	exactly the same as the Tcl_(Find|Create)HashEntry macro's,
	so the confusion addressed in this Bug report is gone.
	(Backported from Tcl 8.6)

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Remove unwanted/obsolete 'ddd' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Use 'rpmbuild', not 'rpm' [Bug 2537626].

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Cross-compile support for Win and UNIX (backported)